--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_maps_flutter: ^2.11.0
   geolocator: ^13.0.3
   fluttertoast: ^8.2.12
+  razorpay_flutter: ^1.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
