--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   fluttertoast: ^8.2.12
   razorpay_flutter: ^1.4.0
   intl: ^0.17.0
-  
+  shared_preferences: ^2.5.3
+  lottie: ^2.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
